<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horizontal"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_alignParentTop="true">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textSize="18sp"
            android:onClick="onClick"
            android:text="@string/item1" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textSize="18sp"
            android:onClick="onClick"
            android:text="@string/item2" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textSize="18sp"
            android:onClick="onClick"
            android:text="@string/item3" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:onClick="onClick"
            android:textSize="18sp"
            android:text="@string/item4" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black"/>
        <TextView
            android:id="@+id/tv_item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:onClick="onClick"
            android:textSize="18sp"
            android:text="@string/item5" />
    </LinearLayout>
</HorizontalScrollView>